--- a/package.yaml
+++ b/package.yaml
@@ -22,6 +22,9 @@ description:         Please see the README on Github at <https://github.com/gith
 dependencies:
 - base >= 4.7 && < 5
 - mtl
+- transformers
+- mmorph
+- base-unicode-symbols
 
 library:
   source-dirs: src
